# simple-zipper

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: SimpleZipper.cxx  SimpleZipper.h  SimpleZipperUI.cxx  SimpleZipperUI.h  main.cxx
test/: TestSimpleZipper.h
